--- a/Jeux/Join_JP/Join_JP.html
+++ b/Jeux/Join_JP/Join_JP.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head> 
-        <title> Le monde Digital </title>
+        <title> Start </title>
         <html lang = "fr"></lang>
 
         <meta charset="utf-8">
