--- a/index.html
+++ b/index.html
@@ -1,2 +1,22 @@
-<h1> Hello World </h1>
-<h2>Test</h2>
+<!DOCTYPE html>
+<html>
+    <head> 
+        <title> Start </title>
+        <html lang = "fr"></lang>
+
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
+
+        <link rel="stylesheet" href=".\CSS\main.css"\>
+    </head>
+    <body>
+
+        <div class="page-container">
+            <div class="content-wrap">
+
+            <div> 
+                <a href="Digital_World.html"><button class="button">Devenir Immortel</button></a> 
+            </div>          
+        
+    </body>
+</html>
