--- a/Digital_World.html
+++ b/Digital_World.html
@@ -15,12 +15,12 @@
             <div class="content-wrap">
 
             <div> 
-                <a href="About_me.html"><button class="button">Retrouver l'amour</button></a> 
-                <a href="About_me.html"><button class="button">Rejoindre Jean Paul</button></a> 
-                <a href="About_me.html"><button class="button">Reprendre contact avec les poteaux</button></a> 
-                <a href="About_me.html"><button class="button">Archéologie digitale</button></a> 
-                <a href="About_me.html"><button class="button">Faire des emplettes</button></a> 
-                <a href="About_me.html"><button class="button">Se faire un compagnon de route</button></a> 
+                <a href="Jeux\Love\Love.html"><button class="button">Retrouver l'amour</button></a> 
+                <a href="Jeux\Join_JP\Join_JP.html"><button class="button">Rejoindre Jean Paul</button></a> 
+                <a href="Jeux\Social_media\Social_media.html"><button class="button">Reprendre contact avec les poteaux</button></a> 
+                <a href="Jeux\Digital_archeaology\Digital_archeaology.html"><button class="button">Archéologie digitale</button></a> 
+                <a href="Jeux\Captcha_Maze\Captcha_maze.html"><button class="button">Faire des emplettes</button></a> 
+                <a href="Jeux\Digital_Pet\Digital_Pet.html"><button class="button">Se faire un compagnon de route</button></a> 
 
 
             </div>          
