--- a/Jeux/Join_JP/Join_JP.html
+++ b/Jeux/Join_JP/Join_JP.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head> 
-        <title> Start </title>
+        <title> Rejoindre Jean Paul</title>
         <html lang = "fr"></lang>
 
         <meta charset="utf-8">
@@ -15,12 +15,6 @@
             <div class="content-wrap">
 
             <div> 
-                <a href="About_me.html"><button class="button">Retrouver l'amour</button></a> 
-                <a href="About_me.html"><button class="button">Rejoindre Jean Paul</button></a> 
-                <a href="About_me.html"><button class="button">Reprendre contact avec les poteaux</button></a> 
-                <a href="About_me.html"><button class="button">Archéologie digitale</button></a> 
-                <a href="About_me.html"><button class="button">Faire des emplettes</button></a> 
-                <a href="About_me.html"><button class="button">Se faire un compagnon de route</button></a> 
 
 
             </div>          
