--- a/Jeux/Love/Love.html
+++ b/Jeux/Love/Love.html
@@ -7,7 +7,8 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
 
-        <link rel="stylesheet" href=".\CSS\main.css"\>
+        <script src="Love.js"></script>
+
     </head>
     <body>
 
@@ -15,6 +16,17 @@
             <div class="content-wrap">
 
             <div> 
+
+                <p id="question">Questions</p>
+
+                <div>
+                    <button class="button">Réponse 1 </button>
+                    <button class="button">Réponse 2 </button>
+                    <button class="button">Réponse 3 </button>
+                    <button class="button">Réponse 4 </button>
+
+
+                </div>
 
 
             </div>          
