--- a/Jeux/Love/Love.html
+++ b/Jeux/Love/Love.html
@@ -7,7 +7,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
 
-        <script src="Love.js"></script>
+        <script src="./Love.js"></script>
 
     </head>
     <body>
