--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <div class="content-wrap">
 
             <div> 
-                <a href="Digital_World.html"><button class="button">Devenir Immortel</button></a> 
+                <a href="Digital_World.html"><button class="button">Devenir Ijjjjmmortel</button></a> 
             </div>          
         
     </body>
