--- a/Digital_World.html
+++ b/Digital_World.html
@@ -12,8 +12,7 @@
     <body>
 
         <div class="page-container">
-            <div class="content-wrap">
-
+            <h1>Le monde digital</h1>
             <div> 
                 <a href="Jeux\Love\Love.html"><button class="button">Retrouver l'amour</button></a> 
                 <a href="Jeux\Join_JP\Join_JP.html"><button class="button">Rejoindre Jean Paul</button></a> 
@@ -21,9 +20,9 @@
                 <a href="Jeux\Digital_archeaology\Digital_archeaology.html"><button class="button">Archéologie digitale</button></a> 
                 <a href="Jeux\Captcha_Maze\Captcha_maze.html"><button class="button">Faire des emplettes</button></a> 
                 <a href="Jeux\Digital_Pet\Digital_Pet.html"><button class="button">Se faire un compagnon de route</button></a> 
+            </div>
 
-
-            </div>          
+        </div>          
         
     </body>
 </html>
