--- a/index.html
+++ b/index.html
@@ -12,11 +12,9 @@
     <body>
 
         <div class="page-container">
-            <div class="content-wrap">
 
-            <div> 
-                <a href="Digital_World.html"><button class="button">Devenir Ijjjjmmortel</button></a> 
-            </div>          
+                <a href="Digital_World.html"><button class="button">Devenir Immortel</button></a> 
+        </div>          
         
     </body>
 </html>
